# MacDotfiles

./: .gitignore  setup.sh
docs/: nginx.md
dotfiles/alacritty/: alacritty.toml
dotfiles/brew/: Brewfile
dotfiles/cursor/: settings.json
dotfiles/ghostty/: config
dotfiles/ghostty/shaders/: _cleaner_crt.frag  _crt.frag  matrix-hallway.frag
dotfiles/hammerspoon/: init.lua
dotfiles/nginx/: nginx.conf
dotfiles/nvim/: lazy-lock.json
dotfiles/profile/: zprofile
dotfiles/vscode/: settings.json
dotfiles/zsh/: zshrc
tools/urblind/: CMakeLists.txt
tools/urblind/src/: macos_capture.h  macos_capture.mm  main.cpp
